--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 60px;
+  height: 80px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -25,6 +25,93 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.App-body {
+  padding: 20px;
+}
+
+.App-body > * {
+  margin: auto;
+}
+
+.registeration-page {
+  width: 360px;
+  margin: auto;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+label {
+  font-size: 16px;
+  text-align: left;
+}
+
+input {
+  min-width: 200px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+}
+
+button {
+  color: #fff;
+  background-color: #0095ff;
+  border: 1px solid #0095ff;
+  padding: 14px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 20px;
+  width: 50%;
+}
+
+button:hover {
+  color: #0095ff;
+  background-color: #fff;
+  border: 1px solid #0095ff;
+}
+
+.group-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.password-hint {
+  width: 220px;
+  font-size: 11px;
+  font-style: italic;
+  color: #0095ff;
+  text-align: left;
+  margin-bottom: 20px;
+
+  p {
+    display: block;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+  }
+
+  ul {
+    display: block;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 20px;
+  }
+}
+
+.error {
+  color: #ff0000;
+}
+
+.success {
+  color: #008000;
 }
 
 @keyframes App-logo-spin {
